# HippoCamp

./: .env.example  .gitattributes  .gitignore  CITATION.cff  README.md  evaluate.py  requirements-local.txt  requirements.txt
HippoCamp/: README.md  benchmark_example.json  pyproject.toml
HippoCamp/HippoCamp_Gold/: README.md
HippoCamp/analysis/difficulty/: generate_difficulty_reports.py
HippoCamp/analysis/file_size/: Adam.csv
HippoCamp/analysis/file_time/: file_modification_time_boxplot.py  fill_dates.py
HippoCamp/configs/: providers.yaml  retriever_server.yaml
HippoCamp/configs/pipelines/: indexing.yaml
HippoCamp/scripts/: __init__.py  run_evaluation.py  run_query.py
HippoCamp/src/providers/: __init__.py  base.py  utils.py
HippoCamp/src/providers/generator/: __init__.py  gemini_react.py
HippoCamp/src/rag/: fusion.py  models.py
HippoCamp/src/rag/chunking/: recursive.py  router.py  semantic.py
HippoCamp/src/rag/embedding/: __init__.py  base.py
HippoCamp/src/rag/embedding/dense/: __init__.py  cohere.py  qwen3.py
HippoCamp/src/rag/embedding/sparse/: __init__.py  base.py
HippoCamp/src/rag/evaluation/: __init__.py  runner.py
HippoCamp/src/rag/evaluation/metrics/: __init__.py  lexical.py  retrieval.py  semantic.py
HippoCamp/src/rag/fts/: __init__.py
HippoCamp/src/rag/generator/: azure.py  base.py  gemini.py
HippoCamp/src/rag/pipeline/: __init__.py  query.py  utils.py
HippoCamp/src/rag/rerank/: base.py  cohere.py
HippoCamp/src/rag/vector_store/: __init__.py  base.py  qdrant.py
HippoCamp/src/shared/: __init__.py  env.py
agent/: vllm.py  (+8 more)
(+76 files in other folders)
